// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetsListCard should render component 1`] = `
<div>
  <div
    class="analytics-assets-list"
  >
    <div
      class="flex-grow-1 mx-4 table-root table-hover"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                class="table-head-title table-cell-expand"
              >
                Asset Name
              </th>
              <th
                class="table-head-title"
              >
                Asset Type
              </th>
            </tr>
          </thead>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`AssetsListCard should render component with items 1`] = `
<div>
  <div
    class="analytics-assets-list"
  >
    <div
      class="flex-grow-1 mx-4 table-root table-hover"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                class="table-head-title table-cell-expand"
              >
                Asset Name
              </th>
              <th
                class="table-head-title"
              >
                Asset Type
              </th>
            </tr>
          </thead>
          <tbody
            class="table-hover"
          >
            <tr
              class=""
            >
              <td
                class="table-cell-expand"
              >
                <a
                  class="font-weight-semibold text-truncate-inline text-dark"
                  href="/workspace/2000/123/assets/web-content/01234/page/www.liferay.com/231494203?rangeKey=30"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    231494203
                  </span>
                </a>
              </td>
              <td
                class="table-cell-expand"
              >
                <div
                  class="font-weight-semibold text-secondary text-truncate-inline"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Web Content
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="table-cell-expand"
              >
                <a
                  class="font-weight-semibold text-truncate-inline text-dark"
                  href="/workspace/2000/123/assets/web-content/01234/page/www.liferay.com/231494203?rangeKey=30"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    231494203
                  </span>
                </a>
              </td>
              <td
                class="table-cell-expand"
              >
                <div
                  class="font-weight-semibold text-secondary text-truncate-inline"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Web Content
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="table-cell-expand"
              >
                <a
                  class="font-weight-semibold text-truncate-inline text-dark"
                  href="/workspace/2000/123/assets/web-content/01234/page/www.liferay.com/231494203?rangeKey=30"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    231494203
                  </span>
                </a>
              </td>
              <td
                class="table-cell-expand"
              >
                <div
                  class="font-weight-semibold text-secondary text-truncate-inline"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Web Content
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="table-cell-expand"
              >
                <a
                  class="font-weight-semibold text-truncate-inline text-dark"
                  href="/workspace/2000/123/assets/web-content/01234/page/www.liferay.com/231494203?rangeKey=30"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    231494203
                  </span>
                </a>
              </td>
              <td
                class="table-cell-expand"
              >
                <div
                  class="font-weight-semibold text-secondary text-truncate-inline"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Web Content
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="table-cell-expand"
              >
                <a
                  class="font-weight-semibold text-truncate-inline text-dark"
                  href="/workspace/2000/123/assets/web-content/01234/page/www.liferay.com/231494203?rangeKey=30"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    231494203
                  </span>
                </a>
              </td>
              <td
                class="table-cell-expand"
              >
                <div
                  class="font-weight-semibold text-secondary text-truncate-inline"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Web Content
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="table-cell-expand"
              >
                <a
                  class="font-weight-semibold text-truncate-inline text-dark"
                  href="/workspace/2000/123/assets/web-content/01234/page/www.liferay.com/231494203?rangeKey=30"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    231494203
                  </span>
                </a>
              </td>
              <td
                class="table-cell-expand"
              >
                <div
                  class="font-weight-semibold text-secondary text-truncate-inline"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Web Content
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="table-cell-expand"
              >
                <a
                  class="font-weight-semibold text-truncate-inline text-dark"
                  href="/workspace/2000/123/assets/web-content/01234/page/www.liferay.com/231494203?rangeKey=30"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    231494203
                  </span>
                </a>
              </td>
              <td
                class="table-cell-expand"
              >
                <div
                  class="font-weight-semibold text-secondary text-truncate-inline"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Web Content
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="table-cell-expand"
              >
                <a
                  class="font-weight-semibold text-truncate-inline text-dark"
                  href="/workspace/2000/123/assets/web-content/01234/page/www.liferay.com/231494203?rangeKey=30"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    231494203
                  </span>
                </a>
              </td>
              <td
                class="table-cell-expand"
              >
                <div
                  class="font-weight-semibold text-secondary text-truncate-inline"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Web Content
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
            >
              <td
                class="table-cell-expand"
              >
                <a
                  class="font-weight-semibold text-truncate-inline text-dark"
                  href="/workspace/2000/123/assets/web-content/01234/page/www.liferay.com/231494203?rangeKey=30"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    231494203
                  </span>
                </a>
              </td>
              <td
                class="table-cell-expand"
              >
                <div
                  class="font-weight-semibold text-secondary text-truncate-inline"
                >
                  <span
                    class="text-truncate"
                    data-tooltip="false"
                    title=""
                  >
                    Web Content
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
